<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>ai.timefold.solver</groupId>
    <artifactId>timefold-solver-service-parent</artifactId>
    <version>2.2.0</version>
  </parent>

  <groupId>ai.timefold.model</groupId>
  <artifactId>tournamentscheduling</artifactId>
  <version>0.0.1</version>

  <properties>
    <revision>1.0.0-SNAPSHOT</revision>
    <error-prone.version>2.50.0</error-prone.version>
    <jacoco.version>0.8.15</jacoco.version>
    <frontend-maven-plugin.version>2.0.1</frontend-maven-plugin.version>
    <node.version>v24.14.0</node.version>
    <maven.compiler.release>21</maven.compiler.release>
  </properties>

  <dependencies>

    <!-- Testing -->
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-jacoco</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.27.7</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.tngtech.archunit</groupId>
      <artifactId>archunit-junit5</artifactId>
      <version>1.4.2</version>
      <scope>test</scope>
    </dependency>

    <!-- UI -->
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-web-dependency-locator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>bootstrap</artifactId>
      <version>5.3.8</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>jquery</artifactId>
      <version>3.7.1</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>font-awesome</artifactId>
      <version>7.2.0</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.webjars.npm</groupId>
      <artifactId>js-joda</artifactId>
      <version>1.11.0</version>
      <scope>runtime</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <fork>true</fork>
          <compilerArgs>
            <arg>-Werror</arg>
            <arg>-XDcompilePolicy=simple</arg> <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
            <arg>--should-stop=ifError=FLOW</arg>
            <arg>-Xplugin:ErrorProne</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.errorprone</groupId>
              <artifactId>error_prone_core</artifactId>
              <version>${error-prone.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <java>
            <eclipse>
              <version>4.31</version>
              <file>https://raw.githubusercontent.com/TimefoldAI/timefold-solver/refs/heads/main/build/ide-config/src/main/resources/eclipse-format.xml</file>
            </eclipse>
            <removeUnusedImports/>
            <trimTrailingWhitespace/>
            <endWithNewline/>
          </java>
          <markdown>
            <includes>
              <include>**/*.md</include>
            </includes>
            <excludes>
              <exclude>**/node_modules/**</exclude>
              <exclude>**/target/**</exclude>
            </excludes>
          </markdown>
          <upToDateChecking>
            <enabled>true</enabled>
          </upToDateChecking>
        </configuration>
        <executions>
          <execution>
            <id>spotless-apply</id>
            <phase>compile</phase>
            <goals>
              <goal>apply</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${version.io.quarkus}</version>
        <dependencies>
          <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_core</artifactId>
            <version>${error-prone.version}</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <includes>
                <include>org.acme.tournamentschedule.*</include>
              </includes>
            </configuration>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>default-check</id>
            <phase>test</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.30</minimum>
                    </limit>
                    <limit>
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.20</minimum>
                    </limit>
                  </limits>
                </rule>
                <rule>
                  <element>CLASS</element>
                  <includes>
                    <include>org.acme.tournamentschedule.solver.*ConstraintProvider</include>
                  </includes>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>1.00</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.github.eirslett</groupId>
        <artifactId>frontend-maven-plugin</artifactId>
        <version>${frontend-maven-plugin.version}</version>
        <configuration>
          <installDirectory>${project.build.directory}</installDirectory>
          <workingDirectory>${project.basedir}</workingDirectory>
        </configuration>
        <executions>
          <execution>
            <id>install-node-and-npm</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>install-node-and-npm</goal>
            </goals>
            <configuration>
              <nodeVersion>${node.version}</nodeVersion>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.6.3</version>
        <executions>
          <execution>
            <id>report-coverage</id>
            <phase>test</phase>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <classpathScope>test</classpathScope>
              <mainClass>org.acme.tournamentschedule.support.CoverageReportSummary</mainClass>
              <arguments>
                <argument>${project.reporting.outputDirectory}/jacoco/jacoco.csv</argument>
              </arguments>
            </configuration>
          </execution>
          <execution>
            <id>lint-openapi-descriptions</id>
            <phase>verify</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <environmentVariables>
                <PATH>${project.build.directory}/node:${env.PATH}</PATH>
              </environmentVariables>
              <executable>${project.build.directory}/node/npx</executable>
              <arguments>
                <argument>--prefix</argument>
                <argument>${project.build.directory}/node</argument>
                <argument>--yes</argument>
                <argument>@quobix/vacuum</argument>
                <argument>lint</argument>
                <argument>--ruleset</argument>
                <argument>${project.basedir}/.vacuum-ruleset.yaml</argument>
                <argument>--details</argument>
                <argument>--fail-severity</argument>
                <argument>error</argument>
                <argument>${project.basedir}/src/build/openapi.json</argument>
              </arguments>
            </configuration>
          </execution>
          <execution>
            <id>check-shadow-sources-coverage</id>
            <phase>verify</phase>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <classpathScope>test</classpathScope>
              <mainClass>org.acme.tournamentschedule.support.ShadowSourcesCoverageCheck</mainClass>
              <arguments>
                <argument>--source-root</argument>
                <argument>${project.basedir}/src/main/java</argument>
                <argument>--jacoco-report</argument>
                <argument>${project.reporting.outputDirectory}/jacoco/jacoco.xml</argument>
              </arguments>
            </configuration>
          </execution>
          <execution>
            <id>lint-markdown</id>
            <phase>verify</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <environmentVariables>
                <PATH>${project.build.directory}/node:${env.PATH}</PATH>
              </environmentVariables>
              <executable>${project.build.directory}/node/npx</executable>
              <arguments>
                <argument>--prefix</argument>
                <argument>${project.build.directory}/node</argument>
                <argument>--yes</argument>
                <argument>markdownlint-cli2</argument>
                <argument>--config</argument>
                <argument>${project.basedir}/.markdownlint-cli2.jsonc</argument>
                <argument>--</argument>
                <argument>**/*.md</argument>
                <argument>!target/**</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>copy-openapi-json</id>
            <phase>package</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.basedir}/src/build</outputDirectory>
              <resources>
                <resource>
                  <directory>${project.build.directory}/openapi-schema</directory>
                  <includes>
                    <include>openapi.json</include>
                  </includes>
                </resource>
              </resources>
              <overwrite>true</overwrite>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.28.0</version>
        <configuration>
          <rulesets>
            <ruleset>${project.basedir}/.pmd-ruleset.xml</ruleset>
          </rulesets>
          <minimumTokens>150</minimumTokens>
          <failOnViolation>true</failOnViolation>
          <printFailingErrors>true</printFailingErrors>
          <linkXRef>false</linkXRef>
        </configuration>
        <executions>
          <execution>
            <id>pmd-check</id>
            <phase>compile</phase>
            <goals>
              <goal>pmd</goal>
              <goal>cpd</goal>
              <goal>check</goal>
              <goal>cpd-check</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>net.sourceforge.pmd</groupId>
            <artifactId>pmd-core</artifactId>
            <version>7.25.0</version>
          </dependency>
          <dependency>
            <groupId>net.sourceforge.pmd</groupId>
            <artifactId>pmd-java</artifactId>
            <version>7.25.0</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>timefold</id>
      <name>Timefold JFrog Solver and SDK releases repository</name>
      <url>https://timefold.jfrog.io/artifactory/releases-all</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>timefold</id>
      <name>Timefold JFrog Solver and SDK releases repository</name>
      <url>https://timefold.jfrog.io/artifactory/releases-all</url>
      <releases />
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

</project>
